# sharkmer

./: .code-workspace  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PANELS.md  PCR.md  PLAN.md  README.md  ROADMAP.md  build.sh  genomescopemovie.sh  meta.yaml  readme.md  sharkmer_viewer.py  sharkmovie.sh  v3_performance_analysis.md
.claude/: settings.json
.claude/skills/primer-panel/: SKILL.md
.claude/skills/primer-panel/evals/: evals.json
.claude/skills/primer-panel/evals/files/: bare_panel.yaml
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
benchmarks/: .gitignore  benchmark.yaml  blast_validate.py  compare.py  config.yaml  environment.yaml  run_benchmark.py  sra_download.sh  summarize.py  summarize_extended.py
benchmarks/benchmark_results/: angiospermae_1.0.0_3.0.0-rc_20260411_053704.md  angiospermae_1.0.0_3.0.0-rc_20260411_053704.yaml  angiospermae_1.0.0_3.0.0_20260413_122730.md  angiospermae_1.0.0_3.0.0_20260413_122730.yaml  bacteria_1.0.0_3.0.0-rc_20260411_053704.md  bacteria_1.0.0_3.0.0-rc_20260411_053704.yaml  bacteria_1.0.0_3.0.0_20260413_122730.md  bacteria_1.0.0_3.0.0_20260413_122730.yaml  benchmark_3.0.0-rc_22ddf27_20260411_053704.summary.md  benchmark_3.0.0_fb4bcd5_20260413_122730.summary.md  cnidaria_1.1.0_3.0.0-rc_20260411_053704.md  cnidaria_1.1.0_3.0.0-rc_20260411_053704.yaml  cnidaria_1.1.0_3.0.0_20260413_122730.md  cnidaria_1.1.0_3.0.0_20260413_122730.yaml  human_1.0.0_3.0.0-rc_20260411_053704.md  human_1.0.0_3.0.0-rc_20260411_053704.yaml  human_1.0.1_3.0.0_20260413_122730.md  human_1.0.1_3.0.0_20260413_122730.yaml  insecta_1.0.0_3.0.0-rc_20260411_053704.md  insecta_1.0.0_3.0.0-rc_20260411_053704.yaml  insecta_1.0.0_3.0.0_20260413_122730.md  insecta_1.0.0_3.0.0_20260413_122730.yaml  teleostei_1.0.0_3.0.0-rc_20260411_053704.md  teleostei_1.0.0_3.0.0-rc_20260411_053704.yaml  teleostei_1.0.0_3.0.0_20260413_122730.md  teleostei_1.0.0_3.0.0_20260413_122730.yaml
benchmarks/results/: 2026-03-21_sharkmer_2.0.0-alpha_1c12c0e.yaml  2026-03-21_sharkmer_2.0.0-alpha_478c7ab.yaml  2026-03-21_sharkmer_2.0.0-alpha_70c1f10.summary.md  2026-03-21_sharkmer_2.0.0-alpha_70c1f10.yaml  2026-03-21_sharkmer_2.0.0-alpha_94944d2.yaml  2026-03-21_sharkmer_2.0.0-alpha_a67f918.summary.md  2026-03-21_sharkmer_2.0.0-alpha_a67f918.yaml  2026-03-21_sharkmer_2.0.0-alpha_a95fc23.summary.md  2026-03-21_sharkmer_2.0.0-alpha_a95fc23.yaml  2026-03-22_sharkmer_2.0.0-alpha_026d93c.summary.md  2026-03-22_sharkmer_2.0.0-alpha_026d93c.yaml  2026-03-22_sharkmer_2.0.0-alpha_53f595a.summary.md  2026-03-22_sharkmer_2.0.0-alpha_53f595a.yaml  2026-03-22_sharkmer_2.0.0-alpha_b139733.summary.md  2026-03-22_sharkmer_2.0.0-alpha_b139733.yaml  2026-03-22_sharkmer_2.0.0-alpha_bab69fc.summary.md  2026-03-22_sharkmer_2.0.0-alpha_bab69fc.yaml  2026-03-22_sharkmer_2.0.0-alpha_e7204d3.summary.md  2026-03-22_sharkmer_2.0.0-alpha_e7204d3.yaml  2026-03-25_sharkmer_2.0.0_bcb7818.summary.md  2026-03-25_sharkmer_2.0.0_bcb7818.yaml  2026-03-28_sharkmer_3.0.0-dev_b9a9835.summary.md  2026-03-28_sharkmer_3.0.0-dev_b9a9835.yaml  2026-03-29_sharkmer_3.0.0-dev_3c3a8c7.summary.md  2026-03-29_sharkmer_3.0.0-dev_3c3a8c7.yaml  2026-03-29_sharkmer_3.0.0-dev_602236b.summary.md  2026-03-29_sharkmer_3.0.0-dev_602236b.yaml  2026-03-29_sharkmer_3.0.0-dev_68cc77e.summary.md  2026-03-29_sharkmer_3.0.0-dev_68cc77e.yaml  2026-03-30_sharkmer_3.0.0-dev_7c7bb31.summary.md  2026-03-30_sharkmer_3.0.0-dev_7c7bb31.yaml  2026-03-31_sharkmer_3.0.0-dev_5914f51.summary.md  2026-03-31_sharkmer_3.0.0-dev_5914f51.yaml  2026-03-31_sharkmer_3.0.0-dev_7c7bb31.summary.md  2026-03-31_sharkmer_3.0.0-dev_7c7bb31.yaml  2026-03-31_sharkmer_3.0.0-dev_a834cab.summary.md  2026-03-31_sharkmer_3.0.0-dev_a834cab.yaml  2026-03-31_sharkmer_3.0.0-dev_ba06eef.summary.md  2026-03-31_sharkmer_3.0.0-dev_ba06eef.yaml  2026-04-01_sharkmer_3.0.0-dev_06b042a.summary.md  (+25 more)
dev_docs/: DESIGN_DECISIONS.md  FAILURE_ANALYSIS.md  OVERVIEW.md  PLAN.md  failure_analysis.md  overview.md  primer_binding.yaml
docker/: Dockerfile
misc/: path_finder.py  readme.me
panels/: angiospermae.yaml  bacteria.yaml  c_elegans.yaml  cnidaria.yaml  human.yaml  hydrozoa.yaml  insecta.yaml  metazoa.yaml  teleostei.yaml
panels/examples/: reference.yaml
schemas/panel/: v2.json
scripts/: bootstrap_from_runs.py  bootstrap_references.py  compare_jellyfish.sh  pre-commit  sweep_summary.py  validate_all_panels.sh  validate_all_panels_slurm.sh  validate_panel.py
scripts/sharkmer_validate/: __init__.py  blast_references.py  primer_analysis.py  report.py  results.py  runner.py
sharkmer/: .gitignore  Cargo.toml  build.sh  meta.yaml  readme.md
sharkmer/misc/: path_finder.py
sharkmer/panels/: angiospermae.yaml  bacteria.yaml  cnidaria.yaml  human.yaml
sharkmer/src/: main.rs  test.rs
sharkmer/src/kmer/: mod.rs
sharkmer/src/pcr/: mod.rs  preconfigured.rs
sharkmer/src/rad/: mod.rs
sharkmer/tests/: spcr_18s.rs
sharkmer_viewer/: .gitignore  Dockerfile  LICENSE.txt  genomescopemovie.sh  readme.md  setup.cfg
sharkmer_viewer/sharkmer_viewer/: __init__.py  sharkmer_viewer.py
sharkmer_viewer/tests/: test_sharkmer_viewer.py
sharkmer_viewer/tests/data/: Cordagalma.histo  Cordagalma.stats  Nanomia_bijuga.histo  Nanomia_bijuga.stats
src/: cache.rs  cli.rs  format.rs  io.rs  main.rs  stats.rs  test.rs
src/kmer/: chunk.rs  counting.rs  encoding.rs  histogram.rs  mod.rs
src/pcr/: bubble.rs  components.rs  graph.rs  mod.rs  paths.rs  preconfigured.rs  primers.rs  pruning.rs  read_filter.rs  seed_eval.rs  threading.rs
tests/: .gitignore  Snakefile  aggregate_benchmarks.py  aggregate_stats.py  batch_snake.sh  config.yaml  readme.md  spcr_18s.rs  sra.py
tests/fixtures/: test_panel.yaml
workflow/: .gitignore  Snakefile  aggregate_stats.py  batch_snake.sh  config.yaml
