[package]
name = "sharkmer"
version = "3.0.0-dev"
authors = ["Casey Dunn <casey.dunn@yale.edu>"]
description = "In silico PCR (sPCR) and incremental kmer counting from whole-genome shotgun reads"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/caseywdunn/sharkmer"

# Hash map backend for kmer counting. ahashmap (default) uses AES-NI hardware
# acceleration and is significantly faster than fxhashmap on modern CPUs.
[features]
default = ["ahashmap"]
fxhashmap = []
ahashmap = ["dep:ahash"]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.2.7", features = ["derive"]}
clap_complete = { version = "4" }
rand = { version = "0.8.5"}
rayon = { version = "1.7.0"}
petgraph = { version = "0.6.4"}
bio = { version = "1.4.0"}
rustc-hash = { version = "1.1" }
ahash = { version = "0.8", optional = true }
anyhow = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_yml = { version = "0.0.12" }
flate2 = { version = "1" }
log = { version = "0.4" }
env_logger = { version = "0.11" }
indicatif = { version = "0.17" }
ureq = { version = "2" }
peak_alloc = { version = "0.3" }
dirs = { version = "6" }
sha2 = { version = "0.10" }

[dev-dependencies]
tempfile = "3"