[package]
name = "sharkmer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"]}
rand = { version = "0.8.5"}
rayon = { version = "1.7.0"}
rustc-hash = { version = "1.1.0"}
petgraph = { version = "0.6.4"}
bio = { version = "1.4.0"}

