[metadata]
name = sharkmer_viewer
version = 0.1.0
author = Casey W. Dunn
author_email = casey.dunn@yale.edu
description = tools for kmer analysis of sharkmer output
long_description = tools for kmer analysis of sharkmer output.
url = https://github.com/caseywdunn/sharkmer
project_urls =
    Bug Tracker = https://github.com/caseywdunn/sharkmer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = .
packages = find:
python_requires = >=3.10

setup_requires =
    setuptools

install_requires =
    matplotlib
    numpy
    pandas
    scipy
    plotly

[options.extras_require]
dev =
    pytest
	mypy
    black == 22.3.0
    flake8 == 4.0.1
    pre-commit == 2.17.0

[options.packages.find]
where = .

[aliases]
test = pytest [test]

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths =
    tests

[options.entry_points]
console_scripts =
    sharkmer_viewer = sharkmer_viewer:main